WIP: stashing latest

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/15-dropdown-collapse.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/15-dropdown-collapse.twig
@@ -1,6 +1,7 @@
 {% embed "@bolt-components-dropdown/dropdown.twig" with {
   title: "Toggle Menu",
-  collapse: true
+  center: true,
+  collapse: true,
 } %}
   {% block content %}
     {% include "@bolt-components-nav/nav.twig" with {
