--- a/packages/components/bolt-navbar/src/navbar.twig
+++ b/packages/components/bolt-navbar/src/navbar.twig
@@ -17,12 +17,12 @@
   bolt-component
 >
   {% embed "@bolt-components-band/band.twig" with {
-    "size": vspacing,
-    "theme": theme,
-    "fullBleed": true
+    size: vspacing,
+    theme: theme,
+    fullBleed: true,
   } %}
 
-    {% block band_background %}
+    {# block band_background %}
       {% if gradient == "true" %}
         {% include "@bolt-components-background/background.twig" with {
           "opacity": "light",
@@ -34,7 +34,7 @@
           }
         } only %}
       {% endif %}
-    {% endblock band_background %}
+    {% endblock band_background #}
 
     {% block band_content %}
       <nav class="c-bolt-navbar">
@@ -42,11 +42,16 @@
           {% include "@bolt-components-navbar/_navbar-title.twig" with title only %}
         {% endif %}
 
-        {% if links %}
+        {% if dropdown %}
+          <div class="c-bolt-navbar__nav">
+            {% include "@bolt-components-dropdown/dropdown.twig" with dropdown only %}
+          </div>
+        {% elseif links %}
           <div class="c-bolt-navbar__nav">
             {% include "@bolt-components-nav/nav.twig" %}
           </div>
         {% endif %}
+
       </nav>
     {% endblock %}
 
