feat: 1st pass building priority-nav component

--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar.twig
@@ -6,8 +6,9 @@
       "name": "marketing-gray"
     }
   },
+  "vspacing": "xsmall",
   dropdown: {
-    title: "Pega's Key Concepts",
+    title: "Pegas Key Concepts",
     collapse: true,
     center: true,
     content: include("@bolt-components-nav/nav.twig", {
