--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -9,31 +9,41 @@ $bolt-navbar-title-transition: $bolt-transition;
 
 bolt-navbar {
   display: block;
+  overflow: visible;
 }
 
 .c-bolt-navbar {
+  @include bolt-padding-top(xsmall);
+  @include bolt-padding-bottom(xsmall);
+  @include bolt-padding-left(medium);
+  @include bolt-padding-right(medium);
+
+  max-width: bolt-breakpoint(xxlarge);
+  margin: 0 auto;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
 
-
-
   @supports (display: contents) {
-    flex-direction: row;
-    display: grid;
-    grid-template-columns: auto 1fr fit-content(100px);
-    grid-template-rows: 1fr auto;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
+      flex-direction: row;
+      display: grid;
+      grid-template-columns: auto 1fr fit-content(100px);
+      grid-template-rows: 1fr auto;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
 
 
 // Nav title
 .c-bolt-navbar__title {
-  @include bolt-margin(0 small 0 0);
+  @include bolt-margin(0 medium 0 0);
+  flex-shrink: 0;
 
   display: flex;
   flex-wrap: nowrap;
@@ -70,12 +80,11 @@ bolt-navbar {
 // Nav items
 .c-bolt-navbar__nav {
   @include bolt-margin(0 0 0 small);
+  width: 100%;
+  flex-shrink: 1;
+  // overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 
-  @supports (display: contents) {
-    display: contents;
-    grid-column: 2/span 3;
-    grid-row: 1/span 1;
-  }
 
   // TODO: [Mai] The following is a hack to hide the nav on small screens, there should be a better option to hide and show in the future from the design team.
   // display: none;
