--- a/packages/components/bolt-navbar/src/navbar.twig
+++ b/packages/components/bolt-navbar/src/navbar.twig
@@ -3,24 +3,21 @@
 {% set themeOptions = schema.properties.theme.enum %}
 {% set theme = theme in themeOptions ? theme : schema.properties.theme.default %}
 
-{% set vspacingOptions = schema.properties.vspacing.enum %}
-{% set vspacing = vspacing in vspacingOptions ? vspacing : schema.properties.vspacing.default %}
+{# {% set vspacingOptions = schema.properties.vspacing.enum %} #}
+{# {% set vspacing = vspacing in vspacingOptions ? vspacing : schema.properties.vspacing.default %} #}
 
-{% set gradientOptions = schema.properties.gradient.enum %}
-{% set gradient = gradient in gradientOptions ? gradient : schema.properties.gradient.default %}
+{# {% set gradientOptions = schema.properties.gradient.enum %} #}
+{# {% set gradient = gradient in gradientOptions ? gradient : schema.properties.gradient.default %} #}
 
 
 <bolt-navbar
-  {% if theme %} theme="{{ theme }}" {% endif %}
-  {% if vspacing %} vspacing="{{ vspacing }}" {% endif %}
-  {% if gradient %} gradient="{{ gradient }}" {% endif %}
-  bolt-component
+  {% if theme %} class="t-bolt-{{ theme }}" {% endif %}
 >
-  {% embed "@bolt-components-band/band.twig" with {
+  {# {% embed "@bolt-components-band/band.twig" with {
     size: vspacing,
     theme: theme,
     fullBleed: true,
-  } %}
+  } %} #}
 
     {# block band_background %}
       {% if gradient == "true" %}
@@ -36,26 +33,20 @@
       {% endif %}
     {% endblock band_background #}
 
-    {% block band_content %}
+    {# {% block band_content %} #}
       <nav class="c-bolt-navbar">
         {% if title %}
           {% include "@bolt-components-navbar/_navbar-title.twig" with title only %}
         {% endif %}
 
-        {% if dropdown %}
-          <div class="c-bolt-navbar__nav">
-            {% include "@bolt-components-dropdown/dropdown.twig" with dropdown only %}
-          </div>
-        {% elseif links %}
-          <div class="c-bolt-navbar__nav">
-            {% include "@bolt-components-nav/nav.twig" %}
-          </div>
-        {% endif %}
+        {# <div class="c-bolt-navbar__nav"> #}
+          {% include "@bolt-components-priority-nav/priority-nav.twig" %}
+        {# </div> #}
 
       </nav>
-    {% endblock %}
+    {# {% endblock %} #}
 
-  {% endembed %}
+  {# {% endembed %} #}
 </bolt-navbar>
 
 
