fix: fixing comma

--- a/packages/components/bolt-priority-nav/priority-nav.scss
+++ b/packages/components/bolt-priority-nav/priority-nav.scss
@@ -44,9 +44,7 @@ bolt-priority-nav {
   position: relative;
 
   &:not(.is-ready) {
-    background-image: -webkit-linear-gradient(left, $color-bg, hsla(0, 0%, 100%, 0)), -webkit-linear-gradient(right, $color-bg, hsla(0, 0%, 100%, 0)),
-    -webkit-linear-gradient(left, $color-bg--darker, rgba(234, 240, 246, 0)),
-    -webkit-linear-gradient(right, $color-bg--darker, rgba(234, 240, 246, 0));
+    background-image: -webkit-linear-gradient(left, $color-bg, hsla(0, 0%, 100%, 0)), -webkit-linear-gradient(right, $color-bg, hsla(0, 0%, 100%, 0)), -webkit-linear-gradient(left, $color-bg--darker, rgba(234, 240, 246, 0)), -webkit-linear-gradient(right, $color-bg--darker, rgba(234, 240, 246, 0));
     background-color: $color-bg;
 
     // -ms-overflow-style: -ms-autohiding-scrollbar;
