fix: re-organize and comment on how we include normalize

--- a/packages/global/styles/index.scss
+++ b/packages/global/styles/index.scss
@@ -1,5 +1,5 @@
 @import "@bolt/core";
-@import 'normalize-scss/sass/normalize';
+// [Mai] Normalize.css is already included in generic.
 @import "03-generic/**/*.scss";
 @import "04-elements/**/*.scss";
 @import "05-objects/**/*.scss";
