--- a/packages/global/styles/03-generic/_generic-normalize.scss
+++ b/packages/global/styles/03-generic/_generic-normalize.scss
@@ -1,5 +1,6 @@
 /* ------------------------------------ *\
-  GENERIC - NORMALIZE
+   GENERIC - NORMALIZE
 \* ------------------------------------ */
 
-@include normalize;
+@import "normalize-scss/sass/normalize";
+@include normalize();
