--- a/packages/components/bolt-headline/src/headline.scss
+++ b/packages/components/bolt-headline/src/headline.scss
@@ -136,6 +136,11 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
   @include bolt-font-size(xxxlarge);
 }
 
+// When headline is 60+ chars long
+.c-bolt-headline--xxxlarge-min {
+  font-size: $bolt-font-size--xxxlarge--min;
+}
+
 .c-bolt-text--xxlarge,
 .c-bolt-subheadline--xxlarge,
 .c-bolt-headline--xxlarge {
