--- a/packages/components/bolt-card/src/card.scss
+++ b/packages/components/bolt-card/src/card.scss
@@ -41,22 +41,16 @@ bolt-card {
   flex-basis: 100%;
   flex-grow: 1; //If used in a flex box container, grow to fill available space.
   position: relative;
+  max-width: 100%; //IE11 flexbox fix
+  color: bolt-color(gray, xdark);
+  color: var(--bolt-theme-text, bolt-color(gray, xdark));
   border-radius: $bolt-card-border-radius;
+  transform: translate3d(0, 0, 0) scale(1, 1);
+  transition: $bolt-card-transition;
 
   &:not(.c-bolt-card--wrapper){
     box-shadow: $bolt-card-shadow;
     // height: 100%; //workaround to fix strange flexbox behavior when rendering as a custom element.
-  }
-
-  transform: translate3d(0, 0, 0) scale(1, 1);
-  transition: $bolt-card-transition;
-  max-width: 100%; //IE11 flexbox fix
-  background-color: rgba(bolt-color(white), 0.9); // Default card bgcolor
-  color: bolt-color(gray, xdark); // Default card text color if no css var support
-
-  @supports(--css: variables) {
-    background-color: rgba(bolt-color(white), 0.2);
-    color: var(--bolt-theme-text, bolt-color(gray, xdark));
   }
 
   &:before,
@@ -75,18 +69,17 @@ bolt-card {
   }
 
   &:before {
-    background-color: bolt-color(white); // TODO: needs to map this to theme background color.
-    opacity: 0.9;
+    background-color: bolt-color(white);
 
     @supports(--css: variables) {
-      opacity: 0.7;
       background-color: var(--bolt-theme-card-background, var(--bolt-theme-background, bolt-color(white)));
+      opacity: 0.8;
     }
   }
 
   &:after {
-    box-shadow: $bolt-card-shadow--hover;
-    opacity: 0;
+    background-color: rgba(bolt-color(white), 0.1);
+    box-shadow: none;
     transition: $bolt-card-transition;
   }
 
@@ -99,7 +92,7 @@ bolt-card {
       transform: $bolt-card-translate--hover;
 
       &:after {
-        opacity: 1;
+        box-shadow: $bolt-card-shadow--hover;
       }
     }
 
@@ -107,7 +100,7 @@ bolt-card {
       transform: $bolt-card-translate--active;
 
       &:after {
-        opacity: 0;
+        box-shadow: none;
       }
     }
   }
