feat: add themify to Bolt; convert color palette to JS and upgrade Webpack to wire up theme and color palette data

--- a/packages/components/bolt-share/src/share.scss
+++ b/packages/components/bolt-share/src/share.scss
@@ -10,13 +10,13 @@
     pointer-events: none;
   }
   .c-bolt-link__icon [name='facebook-solid'] {
-    color: bolt-color(social, facebook);
+    color: bolt-color(facebook);
   }
   .c-bolt-link__icon [name='twitter'] {
-    color: bolt-color(social, twitter);
+    color: bolt-color(twitter);
   }
   .c-bolt-link__icon [name='linkedin'] {
-    color: bolt-color(social, linkedin);
+    color: bolt-color(linkedin);
   }
   .c-bolt-link__icon [name='email'],
   .c-bolt-link__icon [name='asset-link'] {
