--- a/packages/core/styles/01-settings/settings-colors/_settings-colors.scss
+++ b/packages/core/styles/01-settings/settings-colors/_settings-colors.scss
@@ -4,147 +4,13 @@
 
 $bolt-color-default: 'base';
 
+$bolt-colors: boltData('colors');
+$bolt-status-colors: boltData('status-colors');
+$bolt-brand-colors: boltData('brand-colors');
+$bolt-social-colors: boltData('social-colors');
 
-// @function hsl($h-hsb, $s-hsb, $b-hsb) {
-//   @if $b-hsb == 0 {
-//     @return hsl(0, 0, 0);
-//   } @else {
-//     $s-hsb: ($s-hsb / 100%);
-//     $l-hsl: ($b-hsb/2) * (2 - ($s-hsb/100));
-
-//     $s-hsl: ($b-hsb * $s-hsb) / if($l-hsl < 50, $l-hsl * 2, 200 - $l-hsl * 2);
-//     @return hsl($h-hsb, $s-hsl, $l-hsl);
-//   }
-// }
-
-$bolt-brand-colors: (
-  'indigo': (
-    'xdark':  hsl(233, 71%, 8%),
-    // indigo, xdark #050922
-
-    'dark': hsl(233, 47%, 16%),
-    // indigo, dark #151a3b
-
-    'base': hsl(233, 47%, 23%),
-    'light': hsl(233, 33%, 49%),
-    'xlight': hsl(233, 73%, 81%)
-  ),
-
-
-// yellow
-  'yellow': (
-    'xdark':  hsl(43, 100%, 20%),
-    'dark':   hsl(43, 82%, 50%),
-    'base':   hsl(43, 100%, 65%),
-    'light':  hsl(43, 100%, 80%),
-    'xlight': hsl(43, 100%, 90%)
-    // yellow, 'xlight': #fef0cc
-  ),
-
-//   teal
-  'teal': (
-    'xdark':  hsl(180, 100%, 10%),
-    'dark':   hsl(180, 82%, 22%),
-    'base':   hsl(180, 100%, 30%),
-    'light':  hsl(180, 45%, 64%),
-    'xlight': hsl(180, 48%, 81%)
-  ),
-
-
-// Orange
-  'orange': (
-    'xdark':  hsl(15, 100%, 20%),
-    'dark':   hsl(15, 82%, 39%),
-    'base':   hsl(15, 82%, 50%),
-    'light':  hsl(15, 100%, 70%),
-    'xlight': hsl(15, 100%, 85%)
-  ),
-
-
-
-//   Neutrals
-
-// xlight 233 1 98 #F6F6F9
-// white 0 0 100 #FFFFFF
-  'gray': (
-    // 'xdark':   hsl(230, 6%, 19%),
-    'xdark':   hsl(233, 6%, 19%),
-    // 'dark':    hsl(235, 5%, 38%),
-    'dark':    hsl(233, 5.3%, 38%),
-    // 'base':    hsl(235, 6%, 58%),
-    'base':    hsl(233, 5.7%, 57.6%),
-    // 'light':   hsl(235, 20%, 90%),
-    'light':   hsl(233, 20%, 90%),
-    // 'xlight':  hsl(233, 23%, 97%)
-    'xlight':  hsl(233, 23%, 97%)
-  ),
-  'black': (
-    'base': hsl(225, 8%, 9%)
-  ),
-  'white': (
-    'base': hsl(0, 0%, 100%)
-  )
-);
-
-
-$bolt-status-colors: (
-  // New / blue
-  // light 201 16 100 #D6F1FF
-  // default 201 100 70 #0074B3
-  // Dark 201 100 50  #005380
-  'blue': (
-    'dark':  hsl(201, 100%, 25%),
-    'base':  hsl(201, 100%, 35%),
-    'light': hsl(201, 100%, 92%)
-    // blue, light #d6f0fe
-  ),
-
-
-//   Success / green
-  'success': (
-    'dark': rgb(37, 41%, 25%),
-    'base': hsl(123, 41%, 35%),
-    'light': hsl(123, 41%, 90%)
-  ),
-
-
-//   Error / red
-  'error': (
-    // 'dark': hsl(6, 76%, 35%),
-    'dark': hsl(6, 76%, 35%),
-    // 'base': hsl(6, 76%, 40%),
-    'base': hsl(6, 76%, 40%),
-    // 'light': hsl(6, 76%, 90%)
-    'light': hsl(6, 80%, 90%)
-  ),
-
-
-//   Warning / yellow
-// light 51 16 98 #FAF4D1
-// default 51 79 91 #E8CD30
-// Dark 51 89 81 #CFB317
-  'warning': (
-    // 'dark': hsl(51, 80%, 45%),
-    'dark': hsl(51, 80%, 45%),
-    // 'base': hsl(51, 80%, 55%),
-    'base': hsl(51, 80%, 55%),
-    // 'light': hsl(51, 80%, 90%)
-    'light': hsl(51, 80%, 90%)
-  )
-);
-
-$bolt-social-colors: (
-  'social': (
-    'facebook': hsl(222, 46%, 42%),
-    'twitter': hsl(196, 100%, 46%),
-    'linkedin': hsl(201, 96%, 36%)
-  )
-);
-
-$bolt-colors: map-merge(map-merge($bolt-brand-colors, $bolt-status-colors), $bolt-social-colors);
 
 @include export-data('colors/all.bolt.json', $bolt-colors);
 @include export-data('colors/status.bolt.json', $bolt-status-colors);
 @include export-data('colors/brand.bolt.json', $bolt-brand-colors);
 @include export-data('colors/social.bolt.json', $bolt-social-colors);
-
