Text Component - Added feature that checks for headline items with xxxlarge font-size and 60+ chars and adds a special 'long-title' helper class

--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -134,6 +134,10 @@ h1, h2, h3, h4, h5, h6, div, span, cite, p {
   &--font-xxxlarge {
     @include bolt-font-size(xxxlarge);
     letter-spacing: $bolt-headline--minus-letter-spacing;
+
+    &.long-title {
+      font-size: $bolt-font-size--xxxlarge--min;
+    }
   }
   &--font-xxlarge {
     @include bolt-font-size(xxlarge);
