--- a/packages/core/styles/02-tools/tools-auto-convert-color/tools.convert-color.scss
+++ b/packages/core/styles/02-tools/tools-auto-convert-color/tools.convert-color.scss
@@ -1,4 +1,4 @@
 
-@function convert-color($string) {
+@function convert-color($string) { /* stylelint-disable-line */
   @return _color($string);
 }
