--- a/packages/global/styles/07-utilities/_utilities-colors.scss
+++ b/packages/global/styles/07-utilities/_utilities-colors.scss
@@ -13,6 +13,6 @@
 
     // @include bolt-color($colorName, $colorShade, important);
     // [Salem]: fix this
-    color: convert-color(boltData('colors.#{$colorName}')) !important;
+    color: convert-color(boltData('colors.#{$colorName}')) !important; /* stylelint-disable-line */
   }
 }
