fix: update function names

--- a/packages/core/styles/02-tools/tools-color-palette/_tools-color-palette.scss
+++ b/packages/core/styles/02-tools/tools-color-palette/_tools-color-palette.scss
@@ -12,9 +12,9 @@
   $tone: 'base'
 ) {
   @if $tone == 'base' {
-    @return convert-color(boltData('colors.#{$color}'));
+    @return bolt-convert-color(bolt-data('colors.#{$color}'));
   } @else {
-    @return convert-color(boltData('colors.#{$color}-#{$tone}'));
+    @return bolt-convert-color(bolt-data('colors.#{$color}-#{$tone}'));
   }
 }
 
