--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar.twig
@@ -25,7 +25,7 @@
       "url": "link-1-url"
     },
     {
-      "text": "Multi-dimensional Power",
+      "text": "Multi-dimensional Power Long Title",
       "url": "link-2-url"
     },
     {
