--- a/packages/components/bolt-navbar/src/_navbar-title.twig
+++ b/packages/components/bolt-navbar/src/_navbar-title.twig
@@ -7,7 +7,7 @@
   <div class="c-bolt-navbar__title-icon">
     {% include "@bolt/icon.twig" with {
       "name": icon.name,
-      "size": "medium"
+      "size": "large"
     } only %}
   </div>
   <{{ tag }} class="c-bolt-navbar__title-text">
