--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -20,20 +20,22 @@ bolt-navlink {
 }
 
 .c-bolt-navlink {
-  @include bolt-padding-top(xsmall);
-  @include bolt-padding-bottom(xsmall);
-  @include bolt-padding-left(medium);
-  @include bolt-padding-right(medium);
-  @include bolt-font-weight(semibold);
+  // @include bolt-padding-top(xsmall);
+  // @include bolt-padding-bottom(xsmall);
+  @include bolt-padding(small, squished);
   @include bolt-font-size(small);
 
-  @include respond-to(medium) {
-    @include bolt-padding(small, squished);
-    @include bolt-font-size(small);
-  }
+  // @include bolt-padding-left(medium);
+  // @include bolt-padding-right(medium);
+  @include bolt-font-weight(semibold);
+  // @include bolt-font-size(small);
+
+  // @include respond-to(medium) {
+
+  // }
 
 
-  white-space: nowrap;
+  // white-space: nowrap;
   position: relative;
   opacity: 0.8;
   transition: opacity $bolt-navlink-text-transition;
