fix: remove parentheses to fix stylelint validation error

--- a/packages/components/bolt-priority-nav/priority-nav.scss
+++ b/packages/components/bolt-priority-nav/priority-nav.scss
@@ -274,7 +274,7 @@ bolt-priority-nav {
   @include bolt-font-size(small);
 
   @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
-    @include bolt-visuallyhidden();
+    @include bolt-visuallyhidden;
   }
 }
 
