feat: add critical css vars package -- handles async loading CSS vars fallback if unsupported

--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -21,6 +21,7 @@
 
     {# @TODO: wire this up to use Critical JS #}
     <script>
+      {{ inline("bolt-components-critical-css-vars.js") }}
       {{ inline("bolt-components-critical-fonts.js") }}
     </script>
 
