--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar--centered.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar--centered.twig
@@ -6,37 +6,31 @@
       "name": "marketing-gray"
     }
   },
-  dropdown: {
-    title: "Pega's Key Concepts",
-    collapse: true,
-    center: true,
-    content: include("@bolt-components-nav/nav.twig", {
-      "links": [
-        {
-          "text": "Real-Time AI",
-          "url": "link-1-url"
-        },
-        {
-          "text": "End-to-end Automation",
-          "url": "link-2-url"
-        },
-        {
-          "text": "Journey-centric Delivery",
-          "url": "link-3-url"
-        },
-        {
-          "text": "Low Code",
-          "url": "link-1-url"
-        },
-        {
-          "text": "Multi-dimensional Power",
-          "url": "link-2-url"
-        },
-        {
-          "text": "Cloud Choice",
-          "url": "link-3-url"
-        }
-      ]
-    })
-  }
+  center: true,
+  links: [
+    {
+      "text": "Real-Time AI",
+      "url": "link-1-url"
+    },
+    {
+      "text": "End-to-end Automation",
+      "url": "link-2-url"
+    },
+    {
+      "text": "Journey-centric Delivery",
+      "url": "link-3-url"
+    },
+    {
+      "text": "Low Code",
+      "url": "link-1-url"
+    },
+    {
+      "text": "Multi-dimensional Power",
+      "url": "link-2-url"
+    },
+    {
+      "text": "Cloud Choice",
+      "url": "link-3-url"
+    }
+  ]
 } %}
