--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -38,6 +38,11 @@ bolt-navbar {
       align-items: center;
     }
   }
+
+  &--center {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 
@@ -45,8 +50,8 @@ bolt-navbar {
 .c-bolt-navbar__title {
   @include bolt-padding-top(small);
   @include bolt-padding-bottom(small);
-
   @include bolt-margin(0 medium 0 0);
+
   flex-shrink: 0;
 
   display: flex;
@@ -66,6 +71,12 @@ bolt-navbar {
     }
   }
 
+  .c-bolt-navbar--center & {
+    @include bolt-margin(0 auto);
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .c-bolt-navbar__title--link {
